Revision history for Perl module Module::Path

0.14 2014-08-16
    - Added Travis config, using cpanfile and cpanm to ensure all dependencies
      are installed before running tests with prove.
      Thanks to DAGOLDEN.

0.13 2014-02-22
    - Looks like in some rare circumstances, Cwd::abs_path() can croak,
      so now we wrap that in eval { } and deal accordingly.

0.12 2014-02-19
    - We now fully resolve symlinks in @INC paths. The previous 'fix'
      for Debian broke the tests on FreeBSD.
      Thanks to Géraud Continsouzas, and Daniel Lintott for help testing.

0.11_03 2014-02-18
    - Another place where we need to worry about getting undef.

0.11_02 2014-02-18
    - Wasn't handling the case where abs_path() returns undef,
      which it does if a symlink "goes nowhere".

0.11_01 2014-02-18
    - The testsuite fix in 0.11 caused a breakage on FreeBSD,
      where a directory path contains a symlink that wasn't
      the final directory. So now module_path() fully resolves
      all symlinks in the path, using Cwd::abs_path().

0.11 2014-02-17
    - Testsuite now uses Cwd::abs_path() on paths from %INC,
      to cope with synlinks in @INC directories.
      This was causing test failures on Debian(-based) systems.
      Thanks to Daniel Lintott and Erez Schatz for reporting
      and testing proposed fix.

0.10_01 2014-02-16
    - Developer release with the change that made it into
      0.11, above.

0.10 2014-02-04
    - mpath can display paths for multiple modules (Ahmad Syaltut)
    - specified min perl version 5.6.0

0.09_01 2013-08-21
    - If a directory in @INC is a symlink, return the linked-to directory
      in the path. Problem report and patch from Sharl Morlaroll
      https://github.com/neilbowers/Module-Path/issues/4

0.09 2013-01-20
    - You can now pass partial module paths, in the format
      used as the keys in %INC. Suggested by Steven Haryanto.

0.08 2012-10-18
    - t/03-mpath.t: now used Devel::FindPerl to get path to perl,